# chess

./: .gitignore  CMakeLists.txt  README.md  shell.html
project/: Chess.cbp  Chess.depend  Chess.layout  animation functions.cpp  animation functions.h  backlight functions.cpp  backlight functions.h  button class.h  checks.cpp  coordinate processing functions.cpp  drawing functions.cpp  drawn object class.h  external declaration of global variables.h  global constants.h  handling functions.cpp  label class.cpp  label class.h  main.cpp  move functions at mat.cpp  move functions.cpp  radio button class.cpp  radio button class.h  secondary functions.cpp
src/: animation functions.cpp  animation functions.h  app-state.h  backlight functions.cpp  backlight functions.h  button class.cpp  button class.h  checks.cpp  checks.h  connector.cpp  connector.hpp  coordinate processing functions.cpp  coordinate processing functions.h  drawing functions.cpp  drawing functions.h  drawn object class.cpp  drawn object class.h  fen.cpp  fen.h  fs.cpp  fs.h  global constants.h  handling functions.cpp  handling functions.h  label class.cpp  label class.h  main.cpp  move functions at mat.cpp  move functions at mat.h  move functions.cpp  move functions.h  radio button class.cpp  radio button class.h  secondary functions.cpp  secondary functions.h
src/game-save-api/: interface.cpp  interface.h  native-game-save-api.cpp  native-game-save-api.h
src/get-next-move-api/: fetch-get-next-move-api.cpp  fetch-get-next-move-api.h  impl.cpp  impl.h  interface.h  stockfish-online-get-next-move-api.cpp  stockfish-online-get-next-move-api.h
